--- a/RetrieveWebDatawithPython.ipynb
+++ b/RetrieveWebDatawithPython.ipynb
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 38,
    "id": "0aa413b9",
    "metadata": {},
    "outputs": [
@@ -112,12 +112,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter - http://py4e-data.dr-chuck.net/known_by_Fikret.html\n",
-      "Enter - 7\n",
-      "Enter - 3\n",
-      "<a href=\"http://py4e-data.dr-chuck.net/known_by_Mhairade.html\">Mhairade</a>\n",
-      "7\n",
-      "2\n"
+      "Enter http://py4e-data.dr-chuck.net/known_by_Kali.html\n",
+      "Enter the position 18\n",
+      "Enter the number of repeats 7\n",
+      "Link:  http://py4e-data.dr-chuck.net/known_by_Latisha.html\n",
+      "Name:  Latisha\n"
      ]
     }
    ],
@@ -135,12 +134,13 @@
     "ctx.check_hostname = False\n",
     "ctx.verify_mode = ssl.CERT_NONE\n",
     "\n",
-    "url = input('Enter - ')\n",
-    "count = input('Enter - ')\n",
-    "count = int(count)\n",
-    "count = count\n",
-    "position = input('Enter - ')\n",
+    "url = input('Enter ')\n",
+    "position = input('Enter the position ')\n",
     "position = int(position)\n",
+    "count = input('Enter the number of repeats ')\n",
+    "count = int(count)\n",
+    "count = count-1\n",
+    "\n",
     "position = position-1\n",
     "html = urllib.request.urlopen(url, context=ctx).read()\n",
     "soup = BeautifulSoup(html, 'html.parser')\n",
@@ -150,20 +150,25 @@
     "\n",
     "i = 1\n",
     "\n",
-    "while i <= count:\n",
+    "for x in range(0, count):\n",
+    "    i+=1\n",
     "    html2 = urllib.request.urlopen(tags[position].get('href', None), context=ctx).read()\n",
     "    soup2 = BeautifulSoup(html2, 'html.parser')\n",
-    "    newtag = soup2('a')\n",
-    "    i+=1\n",
+    "    tags = soup2('a')\n",
     "    \n",
-    "print(newtag[position])   \n",
-    "print(count)\n",
-    "print(position)"
+    "  \n",
+    "            \n",
+    "    \n",
+    "\n",
+    "    \n",
+    "    \n",
+    "print(\"Link: \", tags[position].get('href', None))\n",
+    "print(\"Name: \", tags[position].getText())\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "eb14ae87",
+   "id": "c262f64c",
    "metadata": {},
    "source": [
     "# newlist1 = [x for x in fruits1 if x.isalpha() == True]"
@@ -171,14 +176,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f968dee3",
+   "execution_count": 81,
+   "id": "db9204fc",
    "metadata": {},
    "outputs": [],
    "source": [
     "x = ('apple', 'banana', 'cherry')\n",
     "y = enumerate(x)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "3f7689fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello\n",
+      "Hello\n",
+      "Hello\n",
+      "Hello\n",
+      "Hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = 1\n",
+    "\n",
+    "while s <= 5:\n",
+    "    print(\"Hello\")\n",
+    "    s+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fea42488",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
