--- a/RetrieveWebDatawithPython.ipynb
+++ b/RetrieveWebDatawithPython.ipynb
@@ -154,13 +154,7 @@
     "    i+=1\n",
     "    html2 = urllib.request.urlopen(tags[position].get('href', None), context=ctx).read()\n",
     "    soup2 = BeautifulSoup(html2, 'html.parser')\n",
-    "    tags = soup2('a')\n",
-    "    \n",
-    "  \n",
-    "            \n",
-    "    \n",
-    "\n",
-    "    \n",
+    "    tags = soup2('a')   \n",
     "    \n",
     "print(\"Link: \", tags[position].get('href', None))\n",
     "print(\"Name: \", tags[position].getText())\n"
@@ -212,9 +206,748 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fe87908a",
+   "metadata": {},
+   "source": [
+    "<h3><b>Retrieving Wikipedia</b></h3>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "fea42488",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter - https://en.wikipedia.org/wiki/Nuclear_fission\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "# To run this, download the BeautifulSoup zip file\n",
+    "# http://www.py4e.com/code3/bs4.zip\n",
+    "# and unzip it in the same directory as this file\n",
+    "\n",
+    "import urllib.request, urllib.parse, urllib.error\n",
+    "from bs4 import BeautifulSoup\n",
+    "import ssl\n",
+    "\n",
+    "# Ignore SSL certificate errors\n",
+    "ctx = ssl.create_default_context()\n",
+    "ctx.check_hostname = False\n",
+    "ctx.verify_mode = ssl.CERT_NONE\n",
+    "\n",
+    "url = input('Enter - ')\n",
+    "html = urllib.request.urlopen(url, context=ctx).read()\n",
+    "soup = BeautifulSoup(html, 'html.parser')\n",
+    "\n",
+    "# Retrieve all of the anchor tags\n",
+    "tags = soup('span')\n",
+    "for tag in tags:\n",
+    "    print(tag.get('href', None))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a8d436db",
+   "metadata": {},
+   "source": [
+    "<h3><b>Working with XML</b></h3>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "ba28cc3d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter location: http://py4e-data.dr-chuck.net/comments_42.xml\n",
+      "Retrieving http://py4e-data.dr-chuck.net/xml?address=http%3A%2F%2Fpy4e-data.dr-chuck.net%2Fcomments_42.xml&key=42\n",
+      "Retrieved 36 characters\n",
+      "{'address': 'http://py4e-data.dr-chuck.net/comments_42.xml', 'key': 42}\n",
+      "{ \"address\": \"fail\", \"answer\" : 42 }\n"
+     ]
+    },
+    {
+     "ename": "ParseError",
+     "evalue": "not well-formed (invalid token): line 1, column 0 (<string>)",
+     "output_type": "error",
+     "traceback": [
+      "Traceback \u001b[1;36m(most recent call last)\u001b[0m:\n",
+      "  File \u001b[0;32m~\\anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3369\u001b[0m in \u001b[0;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "  Input \u001b[0;32mIn [7]\u001b[0m in \u001b[0;35m<cell line: 25>\u001b[0m\n    tree = ET.fromstring(data)\n",
+      "\u001b[1;36m  File \u001b[1;32m~\\anaconda3\\lib\\xml\\etree\\ElementTree.py:1349\u001b[1;36m in \u001b[1;35mXML\u001b[1;36m\u001b[0m\n\u001b[1;33m    parser.feed(text)\u001b[0m\n",
+      "\u001b[1;36m  File \u001b[1;32m<string>\u001b[1;36m\u001b[0m\n\u001b[1;31mParseError\u001b[0m\u001b[1;31m:\u001b[0m not well-formed (invalid token): line 1, column 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import urllib.request, urllib.parse, urllib.error\n",
+    "import xml.etree.ElementTree as ET\n",
+    "import ssl\n",
+    "from lxml import etree\n",
+    "\n",
+    "parser = etree.XMLParser(recover=True)\n",
+    "\n",
+    "api_key = False\n",
+    "# If you have a Google Places API key, enter it here\n",
+    "# api_key = 'AIzaSy___IDByT70'\n",
+    "# https://developers.google.com/maps/documentation/geocoding/intro\n",
+    "\n",
+    "if api_key is False:\n",
+    "    api_key = 42\n",
+    "    serviceurl = 'http://py4e-data.dr-chuck.net/xml?'\n",
+    "else :\n",
+    "    serviceurl = 'https://maps.googleapis.com/maps/api/geocode/xml?'\n",
+    "\n",
+    "# Ignore SSL certificate errors\n",
+    "ctx = ssl.create_default_context()\n",
+    "ctx.check_hostname = False\n",
+    "ctx.verify_mode = ssl.CERT_NONE\n",
+    "\n",
+    "while True:\n",
+    "    address = input('Enter location: ')\n",
+    "    if len(address) < 1: break\n",
+    "\n",
+    "    parms = dict()\n",
+    "    parms['address'] = address\n",
+    "    if api_key is not False: parms['key'] = api_key\n",
+    "    url = serviceurl + urllib.parse.urlencode(parms)\n",
+    "    print('Retrieving', url)\n",
+    "    uh = urllib.request.urlopen(url, context=ctx)\n",
+    "\n",
+    "    data = uh.read()\n",
+    "    print('Retrieved', len(data), 'characters')\n",
+    "    print(parms)\n",
+    "    print(data.decode())\n",
+    "    tree = ET.fromstring(data)\n",
+    "\n",
+    "    results = tree.findall('result')\n",
+    "    lat = results[0].find('geometry').find('location').find('lat').text\n",
+    "    lng = results[0].find('geometry').find('location').find('lng').text\n",
+    "    location = results[0].find('formatted_address').text\n",
+    "\n",
+    "    print('lat', lat, 'lng', lng)\n",
+    "    print(location)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fea42488",
+   "id": "4b477f0f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from lxml import etree\n",
+    "parser = etree.XMLParser(recover=True)\n",
+    "etree.fromstring(xmlstring, parser=parser)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "c950a629",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter http://py4e-data.dr-chuck.net/comments_1659798.xml\n",
+      "Name:  Chukwuemeka\n",
+      "Count:  100\n",
+      "Name:  Makala\n",
+      "Count:  99\n",
+      "Name:  Clifford\n",
+      "Count:  96\n",
+      "Name:  Lyena\n",
+      "Count:  95\n",
+      "Name:  Fathima\n",
+      "Count:  94\n",
+      "Name:  Nontando\n",
+      "Count:  90\n",
+      "Name:  Melisa\n",
+      "Count:  90\n",
+      "Name:  Indie\n",
+      "Count:  87\n",
+      "Name:  Gretchen\n",
+      "Count:  86\n",
+      "Name:  Richie\n",
+      "Count:  84\n",
+      "Name:  Keeley\n",
+      "Count:  82\n",
+      "Name:  Gigha\n",
+      "Count:  79\n",
+      "Name:  Serene\n",
+      "Count:  75\n",
+      "Name:  Meron\n",
+      "Count:  75\n",
+      "Name:  Kailyn\n",
+      "Count:  68\n",
+      "Name:  Meri\n",
+      "Count:  67\n",
+      "Name:  Nicholas\n",
+      "Count:  64\n",
+      "Name:  Lael\n",
+      "Count:  59\n",
+      "Name:  Salina\n",
+      "Count:  57\n",
+      "Name:  Munachi\n",
+      "Count:  56\n",
+      "Name:  Regean\n",
+      "Count:  51\n",
+      "Name:  Kadey\n",
+      "Count:  50\n",
+      "Name:  Sharland\n",
+      "Count:  48\n",
+      "Name:  Addison\n",
+      "Count:  45\n",
+      "Name:  Orson\n",
+      "Count:  44\n",
+      "Name:  Cade\n",
+      "Count:  44\n",
+      "Name:  Tayyab\n",
+      "Count:  44\n",
+      "Name:  Mykie\n",
+      "Count:  42\n",
+      "Name:  Xue\n",
+      "Count:  41\n",
+      "Name:  Ramit\n",
+      "Count:  40\n",
+      "Name:  Garry\n",
+      "Count:  40\n",
+      "Name:  Kogan\n",
+      "Count:  37\n",
+      "Name:  Bruin\n",
+      "Count:  35\n",
+      "Name:  Elisa\n",
+      "Count:  32\n",
+      "Name:  Queeneffa\n",
+      "Count:  29\n",
+      "Name:  Laurabeth\n",
+      "Count:  25\n",
+      "Name:  Rian\n",
+      "Count:  23\n",
+      "Name:  Trudy\n",
+      "Count:  21\n",
+      "Name:  Kaylin\n",
+      "Count:  18\n",
+      "Name:  Clarisse\n",
+      "Count:  18\n",
+      "Name:  Rhianyn\n",
+      "Count:  14\n",
+      "Name:  Ceira\n",
+      "Count:  13\n",
+      "Name:  Umer\n",
+      "Count:  13\n",
+      "Name:  Johann\n",
+      "Count:  12\n",
+      "Name:  Emowyn\n",
+      "Count:  9\n",
+      "Name:  Qandeel\n",
+      "Count:  8\n",
+      "Name:  Elidh\n",
+      "Count:  8\n",
+      "Name:  Janani\n",
+      "Count:  7\n",
+      "Name:  Will\n",
+      "Count:  6\n",
+      "Name:  Rose\n",
+      "Count:  1\n",
+      "Total Count:  2421\n",
+      "50\n",
+      "<Element 'commentinfo' at 0x0000019D71F6AD10>\n",
+      "<http.client.HTTPResponse object at 0x0000019D708AF790>\n",
+      "<xml.etree.ElementTree.ElementTree object at 0x0000019D708D2A90>\n"
+     ]
+    }
+   ],
+   "source": [
+    "from urllib.request import urlopen\n",
+    "from xml.etree.ElementTree import parse\n",
+    "import requests \n",
+    "\n",
+    "url = input('Enter ')\n",
+    "#var_url = urlopen(url)\n",
+    "#xmldoc = parse(var_url)\n",
+    "\n",
+    "resp = requests.get(url)\n",
+    "\n",
+    "xmldata = ET.fromstring(resp.content)\n",
+    "\n",
+    "lis = xmldata.findall('comments/comment')\n",
+    "\n",
+    "total = 0\n",
+    "\n",
+    "for d in lis:\n",
+    "    print('Name: ', d.find('name').text)\n",
+    "    print('Count: ', d.find('count').text)\n",
+    "    total+=int(d.find('count').text)\n",
+    "\n",
+    "\n",
+    "print('Total Count: ', total)\n",
+    "print(len(lis))\n",
+    "print(xmldata)\n",
+    "print(var_url)\n",
+    "print(xmldoc)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c47ff3aa",
    "metadata": {},
    "outputs": [],
    "source": []
