--- a/RetrieveWebDatawithPython.ipynb
+++ b/RetrieveWebDatawithPython.ipynb
@@ -951,6 +951,269 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11343f2a",
+   "metadata": {},
+   "source": [
+    "<h2><b>Extracting Data from JSON</b></h2>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "f06fe53f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter http://py4e-data.dr-chuck.net/comments_1659799.json\n",
+      "Name Chuck\n",
+      "Id 001\n",
+      "Attribute 2\n",
+      "Name Brent\n",
+      "Id 009\n",
+      "Attribute 7\n",
+      "Marcel\n",
+      "Philippa\n",
+      "Saffi\n",
+      "Remigiusz\n",
+      "Abigail\n",
+      "Malebo\n",
+      "Kerrieann\n",
+      "Sudais\n",
+      "Kyler\n",
+      "Russell\n",
+      "Abbie\n",
+      "Rhyan\n",
+      "Diaz\n",
+      "Nina\n",
+      "Rehaan\n",
+      "Tanchoma\n",
+      "Bronwyn\n",
+      "Laila\n",
+      "Iana\n",
+      "Asa\n",
+      "Jebadiah\n",
+      "Archie\n",
+      "Brad\n",
+      "Layaan\n",
+      "Rori\n",
+      "Morna\n",
+      "Tanzeel\n",
+      "Cahl\n",
+      "Alexis\n",
+      "Kenzy\n",
+      "Kiaya\n",
+      "Ophelia\n",
+      "Reeha\n",
+      "Jesse\n",
+      "Breanna\n",
+      "Karthikeya\n",
+      "Jaydon\n",
+      "Exodi\n",
+      "Clara\n",
+      "Colm\n",
+      "Jiao\n",
+      "Miren\n",
+      "Audrey\n",
+      "Faisal\n",
+      "Sarka\n",
+      "Nabeel\n",
+      "Karis\n",
+      "Telise\n",
+      "Abdullah\n",
+      "Ijay\n",
+      "Total:  2482\n",
+      "Philippa\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "import requests\n",
+    "\n",
+    "data = '''\n",
+    "[\n",
+    "  { \"id\" : \"001\",\n",
+    "    \"x\" : \"2\",\n",
+    "    \"name\" : \"Chuck\"\n",
+    "  } ,\n",
+    "  { \"id\" : \"009\",\n",
+    "    \"x\" : \"7\",\n",
+    "    \"name\" : \"Brent\"\n",
+    "  }\n",
+    "]'''\n",
+    "\n",
+    "url = input('Enter ')\n",
+    "resp = requests.get(url)\n",
+    "js = json.loads(data)\n",
+    "js2 = json.loads(resp.content)\n",
+    "#print(json.dumps(js, indent =2))\n",
+    "\n",
+    "\n",
+    "#info = json.loads(data)\n",
+    "#print(js)\n",
+    "\n",
+    "#for item in js:\n",
+    "    #print(item['comments']['name'])\n",
+    "    #print('Id', item['id'])\n",
+    "    #print('Attribute', item['x'])\n",
+    "\n",
+    "for item in js:\n",
+    "    print('Name', item['name'])\n",
+    "    print('Id', item['id'])\n",
+    "    print('Attribute', item['x'])\n",
+    "\n",
+    "n = (len(js2['comments']))\n",
+    "total = 0\n",
+    "\n",
+    "for m in js2['comments']:\n",
+    "    print(m['name'])\n",
+    "    total+= m['count']\n",
+    "\n",
+    "print('Total: ', total)\n",
+    "print(js2['comments'][1]['name'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "017a8082",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'note': 'This file contains the sample data for testing', 'comments': [{'name': 'Romina', 'count': 97}, {'name': 'Laurie', 'count': 97}, {'name': 'Bayli', 'count': 90}, {'name': 'Siyona', 'count': 90}, {'name': 'Taisha', 'count': 88}, {'name': 'Alanda', 'count': 87}, {'name': 'Ameelia', 'count': 87}, {'name': 'Prasheeta', 'count': 80}, {'name': 'Asif', 'count': 79}, {'name': 'Risa', 'count': 79}, {'name': 'Zi', 'count': 78}, {'name': 'Danyil', 'count': 76}, {'name': 'Ediomi', 'count': 76}, {'name': 'Barry', 'count': 72}, {'name': 'Lance', 'count': 72}, {'name': 'Hattie', 'count': 66}, {'name': 'Mathu', 'count': 66}, {'name': 'Bowie', 'count': 65}, {'name': 'Samara', 'count': 65}, {'name': 'Uchenna', 'count': 64}, {'name': 'Shauni', 'count': 61}, {'name': 'Georgia', 'count': 61}, {'name': 'Rivan', 'count': 59}, {'name': 'Kenan', 'count': 58}, {'name': 'Hassan', 'count': 57}, {'name': 'Isma', 'count': 57}, {'name': 'Samanthalee', 'count': 54}, {'name': 'Alexa', 'count': 51}, {'name': 'Caine', 'count': 49}, {'name': 'Grady', 'count': 47}, {'name': 'Anne', 'count': 40}, {'name': 'Rihan', 'count': 38}, {'name': 'Alexei', 'count': 37}, {'name': 'Indie', 'count': 36}, {'name': 'Rhuairidh', 'count': 36}, {'name': 'Annoushka', 'count': 32}, {'name': 'Kenzi', 'count': 25}, {'name': 'Shahd', 'count': 24}, {'name': 'Irvine', 'count': 22}, {'name': 'Carys', 'count': 21}, {'name': 'Skye', 'count': 19}, {'name': 'Atiya', 'count': 18}, {'name': 'Rohan', 'count': 18}, {'name': 'Nuala', 'count': 14}, {'name': 'Maram', 'count': 12}, {'name': 'Carlo', 'count': 12}, {'name': 'Japleen', 'count': 9}, {'name': 'Breeanna', 'count': 7}, {'name': 'Zaaine', 'count': 3}, {'name': 'Inika', 'count': 2}]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(js2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "00a2a239",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(js2['comments'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "7dae169b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(n)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "07d4d56b",
+   "metadata": {},
+   "source": [
+    "<h2><b>Second method Extracting Data from JSON</b></h2>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36797667",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter urllib.request\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "import requests\n",
+    "import urllib.request, urllib.parse, urllib.error\n",
+    "\n",
+    "data = '''\n",
+    "[\n",
+    "  { \"id\" : \"001\",\n",
+    "    \"x\" : \"2\",\n",
+    "    \"name\" : \"Chuck\"\n",
+    "  } ,\n",
+    "  { \"id\" : \"009\",\n",
+    "    \"x\" : \"7\",\n",
+    "    \"name\" : \"Brent\"\n",
+    "  }\n",
+    "]'''\n",
+    "\n",
+    "url = input('Enter ')\n",
+    "resp = urllib.request.urlopen(url)\n",
+    "resp2 = resp.read().decode()\n",
+    "js = json.loads(data)\n",
+    "js2 = json.loads(resp)\n",
+    "#print(json.dumps(js, indent =2))\n",
+    "\n",
+    "\n",
+    "#info = json.loads(data)\n",
+    "#print(js)\n",
+    "\n",
+    "#for item in js:\n",
+    "    #print(item['comments']['name'])\n",
+    "    #print('Id', item['id'])\n",
+    "    #print('Attribute', item['x'])\n",
+    "\n",
+    "for item in js:\n",
+    "    print('Name', item['name'])\n",
+    "    print('Id', item['id'])\n",
+    "    print('Attribute', item['x'])\n",
+    "\n",
+    "n = (len(js2['comments']))\n",
+    "total = 0\n",
+    "\n",
+    "for m in js2['comments']:\n",
+    "    print(m['name'])\n",
+    "    total+= m['count']\n",
+    "\n",
+    "print('Total: ', total)\n",
+    "print(js2['comments'][1]['name'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ef3bee4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
